p3/kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ui
  strategy: {}
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - image: ui
        name: ui
        imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  strategy: {}
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: api
        name: api
        imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sse
  name: sse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sse
  strategy: {}
  template:
    metadata:
      labels:
        app: sse
    spec:
      containers:
      - image: sse
        name: sse
        imagePullPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mq
  name: mq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mq
  strategy: {}
  template:
    metadata:
      labels:
        app: mq
    spec:
      containers:
      - image: rabbitmq:3-management
        name: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
spec:
  ports:
  - port: 7778
    protocol: TCP
    targetPort: 7778
  selector:
    app: ui
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
  - port: 7777
    protocol: TCP
    targetPort: 7777
  selector:
    app: api
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sse
  name: sse
spec:
  ports:
  - port: 7776
    protocol: TCP
    targetPort: 7776
  selector:
    app: sse
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mq
  name: mq
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: mq
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 7778
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 7777
          - path: /sse
            pathType: Prefix
            backend:
              service:
                name: sse
                port:
                  number: 7776
